--- a/DIY-Propter/Web.config
+++ b/DIY-Propter/Web.config
@@ -96,4 +96,8 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data></configuration>
