--- a/DIY-Propter/packages.config
+++ b/DIY-Propter/packages.config
@@ -23,5 +23,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Linq" version="1.0.94.1" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net40" />
 </packages>
