--- a/DIY-Propter/Web.config
+++ b/DIY-Propter/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+    <add name="mongo" connectionString="mongodb://localhost"/>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-DIY_Propter-20150124101436;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-DIY_Propter-20150124101436.mdf" />
   </connectionStrings>
   <appSettings>
