--- a/DIY-Propter/packages.config
+++ b/DIY-Propter/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.3.1" targetFramework="net40" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
-  <package id="jQuery" version="1.9.0" targetFramework="net40" />
-  <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
-  <package id="jQuery.Validation" version="1.10.0" targetFramework="net40" />
-  <package id="knockoutjs" version="2.2.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
+  <package id="EntityFramework" version="6.1.2" targetFramework="net40" requireReinstallation="True" />
+  <package id="jQuery" version="2.1.3" targetFramework="net40" />
+  <package id="jQuery.UI.Combined" version="1.11.2" targetFramework="net40" />
+  <package id="jQuery.Validation" version="1.13.1" targetFramework="net40" />
+  <package id="knockoutjs" version="3.2.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Mvc" version="4.0.40804.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net40" />
@@ -19,7 +19,7 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="mongocsharpdriver" version="1.9.2" targetFramework="net40" />
