added basic scraffold for list/create

--- a/DIY-Propter/DIY_Propter.csproj
+++ b/DIY-Propter/DIY_Propter.csproj
@@ -152,6 +152,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\DataStore.cs" />
+    <Compile Include="Models\Prompting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -244,12 +245,12 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Navigation.cshtml" />
     <Content Include="Views\Manage\List.cshtml" />
-    <Content Include="Views\Manage\Create.cshtml" />
     <Content Include="Views\Home\Search.cshtml" />
+    <Content Include="Views\Manage\Index.cshtml" />
+    <Content Include="Views\Manage\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
