added edit/delete/details and fixed scrolling issue in prompt mode

--- a/DIY-Propter/DIY_Propter.csproj
+++ b/DIY-Propter/DIY_Propter.csproj
@@ -260,6 +260,9 @@
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Manage\Create.cshtml" />
     <Content Include="Views\Prompter\Start.cshtml" />
+    <Content Include="Views\Manage\Details.cshtml" />
+    <Content Include="Views\Manage\Edit.cshtml" />
+    <Content Include="Views\Manage\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
